--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "js-dsa",
+  "private": false,
   "version": "1.0.0",
-  "description": "",
+  "description": "js dsa",
   "main": "index.js",
   "scripts": {
-    "test": "jest --no-cache"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -20,6 +29,14 @@
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
-    "jest": "^27.5.1"
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0"
   }
 }
