--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "ts-node": "^10.5.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
+  },
+  "dependencies": {
+    "rxjs": "^7.5.5"
   }
 }
